--- a/WC-End2End/CompCert.tex
+++ b/WC-End2End/CompCert.tex
@@ -1,5 +1,5 @@
 \section{Turtles All The Way Down}~\label{sec:compcert}
 
-How we leverage the comcert compiler when possible. 
+How we leverage the compcert compiler when possible. 
 
 
