Some minor stuff.

--- a/WC-End2End/copilot.tex
+++ b/WC-End2End/copilot.tex
@@ -1,5 +1,13 @@
 \section{Copilot RV Framework}~\label{sec:Copilot}
 
-A short introduction to the copilot language and framework.
+% A short introduction to the copilot language and framework.
 
+Copilot is a language tailored to developing runtime monitors for hard
+real-time, distributed, reactive systems. Briefly, a runtime monitor is a
+program that runs concurrently with a target program with the sole purpose of
+assuring that the target program behaves in accordance with a pre-established
+specification\citep{monitors}. Copilot is a language for writing such
+specifications\citep{copilot, pike-icfp-12, pike-isse-13}. It is an embedded
+domain-specific language, hosted in the lazy functional programming language
+Haskell.
 
