--- a/WC-End2End/specverify.tex
+++ b/WC-End2End/specverify.tex
@@ -1,6 +1,6 @@
 \section{Assuring Specifications}~\label{sec:specverify}
 
-How we assure our specfications using SMT based tools. 
+How we assure our specfications using SMT based tools\citep{assuring-guardians}.
 
 
 \subsection{Assured Well Clear}~\label{sec:verifiywc} 
