--- a/WC-End2End/wellclear.tex
+++ b/WC-End2End/wellclear.tex
@@ -1,4 +1,4 @@
-\section{Well Clear}~/label{sec:wellclear}  
+\section{Well Clear}~\label{sec:wellclear}  
 
 Overview of well clear. Probably summarize Cesar's papers on the subject.
 Some basic formulas : \newline
