--- a/WC-End2End/paper.tex
+++ b/WC-End2End/paper.tex
@@ -227,7 +227,7 @@ Hampton, Virginia, United States, \today
 
 \section*{Abstract}
 {
-\small We descirbe an approach to assured runtime verificaition. Our apporach is illustrated using an example from airspace management.
+\small We describe an approach to assured runtime verificaition. Our apporach is illustrated using an example from airspace management.
 }
 
 {
