Missing bibliography entry.

--- a/WC-End2End/paper.bib
+++ b/WC-End2End/paper.bib
@@ -304,7 +304,7 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
                Robin Morisset and
                Sebastian Niller},
   title     = {Copilot: A Hard Real-Time Runtime Monitor},
-  booktitle     = {Runtime Verification (RV)},
+  booktitle = {Proceedings of the 1st Intl. Conf. on Runtime Verification (RV)},
   year      = {2010},
   pages     = {345-359},
   publisher = {Springer},
@@ -329,6 +329,16 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
   month =     {September}
 }
 
+@InProceedings{assuring-guardians,
+  author =     {Jonathan Laurent and Alwyn Goodloe and Lee Pike},
+  title =      {Assuring the Guardians},
+  booktitle =  {Proceedings of the 6th Intl. Conf. on Runtime Verification (RV)},
+  year =       {2015},
+  xvolume =    {9333},
+  xseries =    {Lecture Notes in Computer Science},
+  xpages =     {87--101},
+  xpublisher = {Springer International Publishing}
+}
 
 @article{javamop,
  author = {Chen, Feng and d'Amorim, Marcelo and Ro\c{s}u, Grigore},
