--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -737,6 +737,20 @@ publisher = {IEEE Computer Society},
 %---------------------
 
 
+@INPROCEEDINGS{Rushby01:buscompare,
+        AUTHOR = {John Rushby},
+        TITLE = {Bus Architectures For Safety-Critical Embedded Systems},
+        BOOKTITLE = {{EMSOFT} 2001: Proceedings of the First Workshop on Embedded Software},
+        YEAR = 2001,
+        EDITOR = {Tom Henzinger and Christoph Kirsch},
+        PUBLISHER = {Springer-Verlag},
+        ADDRESS = {Lake Tahoe, CA},
+        MONTH = oct,
+        SERIES = {Lecture Notes in Computer Science},
+        VOLUME = 2211,
+        PAGES = {306--323}
+}
+
 
 @INPROCEEDINGS{Rushby07:jitc,
 	AUTHOR = {John Rushby},
@@ -1195,19 +1209,6 @@ month = {December}
   pages     = {105-118}
 }
 
-@INPROCEEDINGS{Rushby01:buscompare,
-	AUTHOR = {John Rushby},
-	TITLE = {Bus Architectures For Safety-Critical Embedded Systems},
-	BOOKTITLE = {Workshop on Embedded Software ({EMSOFT})},
-	YEAR = 2001,
-	OPTEDITOR = {Tom Henzinger and Christoph Kirsch},
-	PUBLISHER = {Springer},
-	OPTADDRESS = {Lake Tahoe, CA},
-	MONTH = {October},
-	SERIES = {LNCS},
-	OPTVOLUME = 2211,
-	PAGES = {306--323}
-}
 
 @inproceedings{Tha88:RDSS,
   author    = {Philip M. Thambidurai and
@@ -1399,6 +1400,15 @@ year = "1985"
   OPTannote =    {}
 }
 
+
+
+@TechReport{butler-faults,
+  author =       {Ricky W. Butler},
+  title =        {A Primer on Architectural Level Fault Tolerance},
+  institution =  {NASA Langley Research Center},
+  year =         {2008},
+  number =       {{NASA/TM}-2008-215108}
+}
 
 @article{butler,
  author = {Butler, R. W. and Finelli, G. B.},
@@ -1988,9 +1998,8 @@ month={March}
 @InProceedings{KarrVRC,
   author = 	 {David A. Karr and Robert A. Vivona and David Roscoe and Stephen M. DePascale and Maria Consiglio},
   title = 	 {Experimental Performance of a Genetic Algorithm for Airborne Strategic Conflict Resolution},
-  booktitle = {Proceedings of {AIAA} Guidance, Navigation and Control Conference}
-  year = 	 {2008},
-
+  booktitle = {Proceedings of {AIAA} Guidance, Navigation and Control Conference},
+  year = 	 {2008}
 }
 
 @inproceedings{NMH14ATIO,
@@ -2015,3 +2024,12 @@ month={March}
  number = "NASA/TP-2011-217067",
  address = "Langley Research Center, Hampton VA 23681-2199, USA"
 }
+
+
+@MastersThesis{Kaveh15,
+  author = 	 {Kaveh Darefesheh},
+  title = 	 {Runtime Monitoring on Hard Real-Time Operating Systems},
+  school = 	 {East Carolina University},
+  year = 	 {2015}
+}
+
