--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -1,10 +1,64 @@
-\section{Reliabiity}\label{sec:ft}
+\section{Reliabiity}~\label{sec:ft}
 
 \noindent\fbox{%
     \parbox{\textwidth}{%
  Question: Under what fault model do you expect the runtime verification system to function?
     }%
 }
+ 
+If RV is to enable IA in safety-critical systems, than the RV must
+meet the high level of reliability that is expected of the of the
+system. Hence we content that assured RV must be \emph{fault-tolerant}
+~\cite{butler-faults}, meaning it that continues to provide its
+required functionality in the presence of faults.  A fault-tolerant
+system must not contain a \emph{single point of failure} such that if
+the single subsystem fails, the entire system fails. 
+
+
+%As part of the
+%overall systems analysis, we can assume that safety analysis has been
+%conducted to at least identify hazards~\cite{XX} and common mode
+%failures~\cite{XXX} that can lead compromise safety. 
+
+
+A \emph{fault-containment region} (FCR) is a region in a system
+designed to ensure faults do not propagate to other
+regions~\cite{Rushby01:buscompare}.  The easiest way to ensure this is
+to physically isolate one FCR from another.  However, FCRs may
+need to communicate, hence  they share channels. An FCR
+containing a monitor may need to share a channel with the SUO.  Care must be taken to
+ensure faults cannot propagate over these channels.  
+
+In the course of our research, we have investigated several approaches
+to creating fault-tolerant Copilot monitors.  Motivated by several
+incidents arising from failures of aircraft pitot tubes, we
+constructed a redundant hardware stack and implemented Copilot
+libraries so as to tolerate a single Byzantine fault of the pitot
+tubes~\cite{pike-isse-13}. Each node sampled an independently
+redundant sensor and performed a Byzantine exchange and a majority
+voting.  Fault injection testing was performed along with flight
+tests.  The hardware used in these experiments were commodity
+microprocessors, but we have recently bought Mil-Spec hardened
+processors are far more reliability given the operational conditions.
+It may not always ne necessary to execute one's monitors on separate
+hardware. We recently investigated several possible architectural
+patterns for implementing fault-tolerant Copilot monitors on
+integrated modular avionics systems running 653~{XXXX} compliant hard
+real-time operating systems~\cite{Kaveh15}. Here, monitors run on the
+same nodes as the software being monitored, but 
+in separate partitions that provide fault-isolation guarantees.
+
+
+
+
+
+
+
+
+% Generally,
+%physical faults in separate FCRs are statistically independent, but under
+%exceptional circumstances, simultaneous faults may be observed in FCRs.  For
+%example, widespread high-intensity radiation may affect multiple FCRs.
 
 
 \noindent\fbox{%
@@ -13,45 +67,45 @@
     }%
 }
 
-\begin{itemize} 
-\item Complex safety-critical systems often have Hazard analysis,
-  FMEA, .... mandated.
-\item  While control engineers often
-  equate safety with stability, structural engineers with structural
-  integrity, and  s/w engineers with software correctness, it is
-  really a systems issues. 
-\item Each discipline's contribution is often vital to ensuring safety
-  and will provide critical evidence to a safety case that the
-  system is safe. 
-\item Given our focus on safety-critical systems we can, we can assume
-  that hazard analysis, FMEA, .... analysis are done in the
-  requirements phase.
-\begin{itemize}
-\item DO 178B 2.2.3 Monitor should not be rendered inoperable by the
-  same failure conditions that cause hazards.
-\item DO 178B 2.2.3  Dictates that the RV should be ``assigned the
-  same software level as most severe failure condition''.
-\item Assured RV for autonomous systems must respect a fault model so
-  as to not fall victim to the hazards and common mode failures
-  detected in analysis. 
-\end{itemize}
-\item Extensive safety analysis (hazard analysis, failure mode effects
-  analysis (FEMA), zonal analysis, etc. 
-\item RV should be able to handle faults allowable under fault model.
-\item Redundancy and independence as well as associated redundancy
-  management must be included in the RV system.
-\item We have investigated how to engineer fault-tolerant monitors to
-  withstand known hazards of sensor failure (pitot tube) failure. 
-\item Redundant HW stack, consensus to withstand 1 Byzantine fault. 
-\item Conducted experiments not only to demonstrate the FT, but to
-  see how the system responded when the defined safety threshold of
-  one fault is surpassed. 
-\item Monitors and steering code need to be isolated from faults in
-  the SUO. 
- \begin{itemize}
-\item We have investigated both separate/redundant RV HW stack 
-\item We have investigated how to architect the monitor system so as
-  run monitors and steering code in separate partitions on a VX-Works
-  653 compliant system. 
-\end{itemize} 
-\end{itemize} 
+%\begin{itemize} 
+%\item Complex safety-critical systems often have Hazard analysis,
+ % FMEA, .... mandated.
+%\item  While control engineers often
+%  equate safety with stability, structural engineers with structural
+%  integrity, and  s/w engineers with software correctness, it is
+%  really a systems issues. 
+%\item Each discipline's contribution is often vital to ensuring safety
+%  and will provide critical evidence to a safety case that the
+%  system is safe. 
+%\item Given our focus on safety-critical systems we can, we can assume
+%  that hazard analysis, FMEA, .... analysis are done in the
+%  requirements phase.
+%\begin{itemize}
+%\item DO 178B 2.2.3 Monitor should not be rendered inoperable by the
+%  same failure conditions that cause hazards.
+%\item DO 178B 2.2.3  Dictates that the RV should be ``assigned the
+%  same software level as most severe failure condition''.
+%\item Assured RV for autonomous systems must respect a fault model so
+%  as to not fall victim to the hazards and common mode failures
+%  detected in analysis. 
+%\end{itemize}
+%\item Extensive safety analysis (hazard analysis, failure mode effects
+%  analysis (FEMA), zonal analysis, etc. 
+%\item RV should be able to handle faults allowable under fault model.
+%\item Redundancy and independence as well as associated redundancy
+%  management must be included in the RV system.
+%\item We have investigated how to engineer fault-tolerant monitors to
+%  withstand known hazards of sensor failure (pitot tube) failure. 
+%\item Redundant HW stack, consensus to withstand 1 Byzantine fault. 
+%\item Conducted experiments not only to demonstrate the FT, but to
+%  see how the system responded when the defined safety threshold of
+%  one fault is surpassed. 
+%\item Monitors and steering code need to be isolated from faults in
+%  the SUO. 
+% \begin{itemize}
+%\item We have investigated both separate/redundant RV HW stack 
+%\item We have investigated how to architect the monitor system so as
+%  run monitors and steering code in separate partitions on a VX-Works
+%  653 compliant system. 
+%\end{itemize} 
+%\end{itemize} 
